champ select related improvements (#92)
* revert to old queuestate paint method

* rename index to context, add a blank instance

* re-format

* change xmpp library back to main-SNAPSHOT

* adjust to xmpp library changes

* only reveal player name when type is unhidden

* reuse swing component to avoid duplicate image loading

* utility changes, better data handling

* added rune data loader

* added args to source providers

* update client-api version

* add sepearte rune panel instances

* allow passing font to tabbedpane for custom tab font size

* add dodge button and global rune page support

* add global rune to champ select

* change registration debug

* use debugged http exectur for storing rune pages

* handle dodging & premade dodges

* improve gatekeeper restriction timer handling

* change context delegation due to nullpointers

* remove sysout prints

* improve null safety